<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.0</version>
    </parent>
    <groupId>no.idporten.eudiw</groupId>
    <artifactId>eudiw-oauth2-server</artifactId>
    <version>DEV-SNAPSHOT</version>
    <name>eudiw-oauth2-server</name>
    <description>EUDIW oAuth2 Server</description>
    <properties>
        <java.version>24</java.version>
        <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
        <idporten-actuator-starter.version>2.0.0</idporten-actuator-starter.version>
        <idporten-access-log.version>2.8.0</idporten-access-log.version>
        <idporten-audit-version>2.5.0</idporten-audit-version>
        <opentelemetry-api.version>1.51.0</opentelemetry-api.version>
        <surefire.plugin.version>3.5.3</surefire.plugin.version>
        <log4j2.version>2.16.0</log4j2.version>
        <nimbus-jose-jwt.version>10.3</nimbus-jose-jwt.version>
        <gson.version>2.13.1</gson.version> <!-- Gson version used by nimbus-jose-jwt, but for some reason the wrong version is included. remove when fixed-->
        <lombok.version>1.18.38</lombok.version>
        <slf4j-api.version>2.0.17</slf4j-api.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>io.micrometer</groupId>
            <artifactId>micrometer-registry-prometheus</artifactId>
        </dependency>
        <dependency>
            <groupId>no.idporten.actuator</groupId>
            <artifactId>idporten-actuator-starter</artifactId>
            <version>${idporten-actuator-starter.version}</version>
        </dependency>
        <dependency>
            <groupId>no.idporten.logging</groupId>
            <artifactId>idporten-access-log-spring-boot-3-starter</artifactId>
            <version>${idporten-access-log.version}</version>
        </dependency>
        <dependency>
            <groupId>no.idporten.logging</groupId>
            <artifactId>idporten-log-audit-spring-boot-3-starter</artifactId>
            <version>${idporten-audit-version}</version>
        </dependency>
        <dependency>
            <groupId>io.opentelemetry</groupId>
            <artifactId>opentelemetry-api</artifactId>
            <version>${opentelemetry-api.version}</version>
        </dependency>
        <dependency>
            <groupId>com.nimbusds</groupId>
            <artifactId>nimbus-jose-jwt</artifactId>
            <version>${nimbus-jose-jwt.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>com.google.code.gson</groupId>
                    <artifactId>gson</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${gson.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j-api.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.skyscreamer</groupId>
            <artifactId>jsonassert</artifactId>
            <version>1.5.3</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>build-info</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <proc>full</proc>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <repositories>
        <repository>
            <id>github</id>
            <name>GitHub felleslosninger Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/felleslosninger/.github</url>
        </repository>
    </repositories>
</project>
